--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <img src="https://photos.prnewswire.com/prnvar/20160217/334137LOGO" align="right" />
     <h1><b>Base Camp Information:</b></h1>
     <p><b>Welcome, My name is Nicole Shelton!<br /> I am a student at Base Camp!!</b></p>
     <h2><b>Reasons to join:</b></h2>
