added class and id attributes.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,16 @@
+<html>
 <head>
-    <style>
-        body {
-            font-family: Helvetica, sans-serif;
-            background-color: #FCFCA5;
-            color: #F7214B
-        }
-
-        h1,
-        h2 {
-            font-family: Papyrus, cursive, sans-serif;
-            font-size: 200%;
-            font-style: normal;
-            font-variant: normal;
-            font-weight: 500;
-            color: #31DCBA;
-        }
-
-        h2 {
-            font-size: 150%;
-        }
-    </style>
     <title>My Webpage</title>
+    
 </head>
 
 <body>
+  <div class="page"></div>
     <img src="https://photos.prnewswire.com/prnvar/20160217/334137LOGO" align="right" />
     <h1><b>Base Camp Information:</b></h1>
     <p><b>Welcome, My name is Nicole Shelton!<br /> I am a student at Base Camp!!</b></p>
     <h2><b>Reasons to join:</b></h2>
+    <div id="content"></header>
     <ul>
         <li>It is an amazing chance for success for those interested.</li>
         <li>It is free which makes it better if money is holding you back.</li>
