added an ordered list

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>My Webpage</title>
-    
+    <link href="css/mywebpagestyle.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -11,7 +11,7 @@
     <p><b>Welcome, My name is Nicole Shelton!<br /> I am a student at Base Camp!!</b></p>
     <h2><b>Reasons to join:</b></h2>
     <div id="content"></header>
-    <ul>
+    <ol>
         <li>It is an amazing chance for success for those interested.</li>
         <li>It is free which makes it better if money is holding you back.</li>
         <li>This is a once in a lifetime chance for highschool seniors, you won't come across anything better!</li>
