added base camp link.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     </ul>
     <p>You can contact me if any questions arise!</p>
     <address><p><a href='mailto:nshelton@basecampcodingacademy.org'>
-    Click link to contact me.</a></p></address>
+    Click here to contact me.</a></p></address>
+    <p>You can also go to the schools webpage for more information.</p>
+    <address><p><a href="http://www.basecampcodingacademy.org">
+    Click link for more information</a></a></p></address>
 </body>
 
 </html>
