Added links to my projects

--- a/startbootstrap-grayscale/index.html
+++ b/startbootstrap-grayscale/index.html
@@ -180,6 +180,20 @@
         </div>
     </section>
 
+    <!-- Links to my projects-->
+    <section id="links"class="container content-section text-center">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+      <h2 style="color:#42DCA3">Links to my projects</h2>
+      <p><a href="https://NicoleShelton.github.io">https://NicoleShelton.github.io<br /></a>
+      <a href="https://NicoleShelton.github.io/basecamp">https://NicoleShelton.github.io/basecamp<br /></a>
+      <a href="https://NicoleShelton.github.io/web_dev">https://NicoleShelton.github.io/web_dev<br /></a>
+      <a href="https://NicoleShelton.github.io/startbootstrap-grayscale">https://NicoleShelton.github.io/startbootstrap-grayscale<br /></a>
+      <a href="https://Rkeisling.github.io/RAddeyCole">https://Rkeisling.github.io/RAddeyCole<br /></a></p>
+    </div>
+  </div>
+</section>
+
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
@@ -206,7 +220,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+            <p>Copyright &copy; My Resume</p>
         </div>
     </footer>
 
