changed link names

--- a/startbootstrap-grayscale/index.html
+++ b/startbootstrap-grayscale/index.html
@@ -185,11 +185,11 @@
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
       <h2 style="color:#42DCA3">Links to my projects</h2>
-      <p><a href="https://NicoleShelton.github.io">https://NicoleShelton.github.io<br /></a>
-      <a href="https://NicoleShelton.github.io/basecamp">https://NicoleShelton.github.io/basecamp<br /></a>
-      <a href="https://NicoleShelton.github.io/web_dev">https://NicoleShelton.github.io/web_dev<br /></a>
-      <a href="https://NicoleShelton.github.io/startbootstrap-grayscale">https://NicoleShelton.github.io/startbootstrap-grayscale<br /></a>
-      <a href="https://Rkeisling.github.io/RAddeyCole">https://Rkeisling.github.io/RAddeyCole<br /></a></p>
+      <p><a href="https://NicoleShelton.github.io">Reasons to join BaseCamp<br /></a>
+      <a href="https://NicoleShelton.github.io/basecamp">BaseCamp Info Page<br /></a>
+      <a href="https://NicoleShelton.github.io/web_dev">Obsess Vintage Page<br /></a>
+      <a href="https://NicoleShelton.github.io/startbootstrap-grayscale">My resume<br /></a>
+      <a href="https://Rkeisling.github.io/RAddeyCole">RAddeyCole Music Page<br /></a></p>
     </div>
   </div>
 </section>
