--- a/startbootstrap-grayscale/index.html
+++ b/startbootstrap-grayscale/index.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading" style="color:#42DCA3">What I Know</h2>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                       <!-- <h4>Python</h4> -->
                       <center>
                           <span class="skills-icon">
@@ -159,7 +159,7 @@
                       </span>
                       </center>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <!-- <h4>HTML</h4> -->
                         <center>
                             <span class="skills-icon">
@@ -167,13 +167,21 @@
                         </span>
                         </center>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <!-- <h4>CSS</h4> -->
                         <center>
                             <span class="skills-icon">
                           <i class="icon-css"></i>
                         </span>
                         </center>
+                    </div>
+                    <div class="col-md-3">
+                      <!-- <h4>JavaScript</h4> -->
+                      <center>
+                          <span class="skills-icon">
+                        <i class="icon-javascript"></i>
+                      </span>
+                      </center>
                     </div>
                 </div>
             </div>
