--- a/startbootstrap-grayscale/index.html
+++ b/startbootstrap-grayscale/index.html
@@ -197,7 +197,8 @@
       <a href="https://NicoleShelton.github.io/basecamp">BaseCamp Info Page<br /></a>
       <a href="https://NicoleShelton.github.io/web_dev">Obsess Vintage Page<br /></a>
       <a href="https://NicoleShelton.github.io/startbootstrap-grayscale">My resume<br /></a>
-      <a href="https://Rkeisling.github.io/RAddeyCole">RAddeyCole Music Page<br /></a></p>
+      <a href="https://NicoleShelton.github.io/RAddeyCole">RAddeyCole Music Page<br /></a>
+      <a href="https://NicoleShelton.github.io/shop">Web store front<br /></a></p>
     </div>
   </div>
 </section>
