changed name on my link

--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -196,7 +196,7 @@
       <p><a href="https://NicoleShelton.github.io">Reasons to join BaseCamp<br /></a>
       <a href="https://NicoleShelton.github.io/basecamp">BaseCamp Info Page<br /></a>
       <a href="https://NicoleShelton.github.io/web_dev">Obsess Vintage Page<br /></a>
-      <a href="https://NicoleShelton.github.io/startbootstrap-grayscale">My resume<br /></a>
+      <a href="https://NicoleShelton.github.io/my_portfolio">My portfolio<br /></a>
       <a href="https://NicoleShelton.github.io/RAddeyCole">RAddeyCole Music Page<br /></a>
       <a href="https://NicoleShelton.github.io/shop">Web store front<br /></a></p>
     </div>
