Added phone number

--- a/my_portfolio/contact.html
+++ b/my_portfolio/contact.html
@@ -86,12 +86,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <h3 style="text-align: center">Want to get in touch? Email me!</h3>
+                <h3 style="text-align: center">Want to get in touch?</h3>
                 <p style="text-align: center">I would love to get in touch with you!
-                  <h3 style="text-align: center">Have questions? Email me!</h3>
+                  <h3 style="text-align: center">Have questions?</h3>
                   <p style="text-align: center">If you have any questions I woulf be happy to answer them for you!<p>
-                    <p style="text-align: center"><a href="mailto:nshelton@basecampcodingacademy.org">Click Link Here</a>
-                    </p>
+                    <p style="text-align: center">Email: nshelton.basecampcodingacademy.org <br /> Cellphone number: 662-589-0286</p>
+                  
             </div>
         </div>
     </div>
