fixed the spelling of my email

--- a/my_portfolio/contact.html
+++ b/my_portfolio/contact.html
@@ -90,7 +90,7 @@
                 <p style="text-align: center">I would love to get in touch with you!
                   <h3 style="text-align: center">Have questions?</h3>
                   <p style="text-align: center">If you have any questions I would be happy to answer them for you!<p>
-                    <p style="text-align: center">Email: nshelton.basecampcodingacademy.org <br /> Cellphone number: 662-589-0286</p>
+                    <p style="text-align: center">Email: nshelton@basecampcodingacademy.org <br /> Cellphone number: 662-589-0286</p>
 
             </div>
         </div>
