Changed sentences around, and fixed some spellings

--- a/my_portfolio/index.html
+++ b/my_portfolio/index.html
@@ -93,19 +93,20 @@
                         </h2>
                         <p>
                           This is where you will find out about me, see some of my projects, and  contact me!<br />
-                          Since you will see all that I figured I'd take the time here to tell you about Base Camp Coding Academy!
+                          Since you will see all that, I figured I'd take the time here to tell you about Base Camp Coding Academy!
                         </p>
                     </a>
                     <h3>How it got started!
                     </h3>
                         <p>Base camp is located in small town Water Valley, Mississippi!
                           They began on only a thought, but with all the talking it finally happened!
-                          A group of higher up people in the software developing indrustry got together, in need of delevopers, to get high school seniors enrolled and have them empolyeed with a good paying job at the end of the 1 year program!
+                          A group of higher up people in the software developing indrustry got together, in need of delevopers, to get high school seniors enrolled.
+                          They want to have them empolyeed with a good paying job at the end of the 1 year program!
                     </a>
                         <h3>Students!
                         </h3>
                         <p>
-                          All of us students in base camp had to go through several interviews and decisions from the board memeber had to be made in order for us to be accepted!
+                          All of us students in base camp had to go through several interviews and decisions from the board memebers had to be made in order for us to be accepted!
                         </p>
                         <h3>
                             Experience!
