Added connect-four project

--- a/my_portfolio/projects.html
+++ b/my_portfolio/projects.html
@@ -107,7 +107,12 @@
                   <img src="img/shop.png" height="150" width="150">
                   <p><a href="https://NicoleShelton.github.io/shop">My game store website with a variety of games to choose from.
                   (created with Eddrick Butler and Jacob Spence!)</a></p>
-                  </div
+                </div>
+                <div class="col-md-3">
+                    <h4> Connect-Four:</h4>
+                    <img src="img/connect-four" height="150" width="150">
+                    <p><a href="https://NicoleShelton.github.io/connect-four">Spooky Connect-Four. (Created with Jacob Spence and Martin Guzman!)</a></p>
+                </div>
                 </section>
     <hr>
 
