added memory project

--- a/my_portfolio/projects.html
+++ b/my_portfolio/projects.html
@@ -110,8 +110,13 @@
                 </div>
                 <div class="col-md-3">
                     <h4> Connect-Four:</h4>
-                    <img src="img/connect-four" height="150" width="150">
+                    <img src="img/connect_four.png" height="150" width="150">
                     <p><a href="https://NicoleShelton.github.io/connect-four">Spooky Connect-Four. (Created with Jacob Spence and Martin Guzman!)</a></p>
+                </div>
+                <div class="col-md-3">
+                    <h4> Memory:</h4>
+                    <img src="img/memory.png" height="150" width="150">
+                    <p><a href="https://NicoleShelton.github.io/memorygame">Fun memory game. (Created with Onna Owens!)</a></p>
                 </div>
                 </section>
     <hr>
