changed website links to the pictures and changed cursor to pointer

--- a/my_portfolio/projects.html
+++ b/my_portfolio/projects.html
@@ -15,7 +15,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -89,34 +89,34 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                   <div class="col-md-3">
                     <h4>Reasons to join BaseCamp page</h4>
-                    <img src="img/reasonstojoinbc.png" height="150" width="150">
-                    <p><a href="https://NicoleShelton.github.io">This is my information page on why you should join Base Camp.</a></p>
+                    <a href="https://NicoleShelton.github.io"><img src="img/reasonstojoinbc.png" height="150" width="150"></a>
+                    <p>This is my information page on why you should join Base Camp.</p>
                   </div>
                   <div class="col-md-3">
                     <h4>Obsess Vintage webpage:</h4>
-                    <img src="img/obsessvintage.png" height="150" width="150">
-                    <p><a href="https://NicoleShelton.github.io/web_dev">For vintage lovers, this is a vintage funiture online store!</a></p>
+                    <a href="https://NicoleShelton.github.io/web_dev"><img src="img/obsessvintage.png" height="150" width="150"></a>
+                    <p>For vintage lovers, this is a vintage funiture online store!</p>
                   </div>
                   <div class="col-md-3">
                     <h4>RAddeyCole Music:</h4>
-                    <img src="img/raddeycolemusic.png" height="150" width="150">
-                    <p><a href="https://NicoleShelton.github.io/RAddeyCole">Colorful music boxes webpage, each box has a different genre of music.</a></p>
+                    <a href="https://NicoleShelton.github.io/RAddeyCole"><img src="img/raddeycolemusic.png" height="150" width="150"></a>
+                    <p>Colorful music boxes webpage, each box has a different genre of music.</p>
                   </div>
                 <div class="col-md-3">
                   <h4>GameShop web store front:</h4>
-                  <img src="img/shop.png" height="150" width="150">
-                  <p><a href="https://NicoleShelton.github.io/shop">My game store website with a variety of games to choose from.
-                  (created with Eddrick Butler and Jacob Spence!)</a></p>
+                  <a href="https://NicoleShelton.github.io/shop"><img src="img/shop.png" height="150" width="150"></a>
+                  <p>My game store website with a variety of games to choose from.
+                  (created with Eddrick Butler and Jacob Spence!)</p>
                 </div>
                 <div class="col-md-3">
                     <h4> Connect-Four:</h4>
-                    <img src="img/connect_four.png" height="150" width="150">
-                    <p><a href="https://NicoleShelton.github.io/connect-four">Spooky Connect-Four. (Created with Jacob Spence and Martin Guzman!)</a></p>
+                    <a href="https://NicoleShelton.github.io/connect-four"><img src="img/connect_four.png" height="150" width="150"></a>
+                    <p>Spooky Connect-Four. (Created with Jacob Spence and Martin Guzman!)</p>
                 </div>
                 <div class="col-md-3">
                     <h4> Memory:</h4>
-                    <img src="img/memory.png" height="150" width="150">
-                    <p><a href="https://NicoleShelton.github.io/memorygame">Fun memory game. (Created with Onna Owens!)</a></p>
+                    <a href="https://NicoleShelton.github.io/memorygame"><img src="img/memory.png" height="150" width="150"></a>
+                    <p>Fun memory game. (Created with Onna Owens!)</p>
                 </div>
                 </section>
     <hr>
