--- a/my_portfolio/projects.html
+++ b/my_portfolio/projects.html
@@ -76,6 +76,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
                         <h1>Projects</h1>
+                        <p>Click images to view page.</p>
                     </div>
                 </div>
             </div>
