Fixed summary and edited credits

--- a/my_portfolio/projects.html
+++ b/my_portfolio/projects.html
@@ -101,13 +101,13 @@
                   <div class="col-md-3">
                     <h4>RAddeyCole Music:</h4>
                     <a href="https://NicoleShelton.github.io/RAddeyCole"><img src="img/raddeycolemusic.png" height="150" width="150"></a>
-                    <p>Colorful music boxes webpage, each box has a different genre of music.</p>
+                    <p>Colorful music boxes with a different genre of music.(Created with Addey Welch and Ricky Keisling)</p>
                   </div>
                 <div class="col-md-3">
                   <h4>GameShop web store front:</h4>
                   <a href="https://NicoleShelton.github.io/shop"><img src="img/shop.png" height="150" width="150"></a>
                   <p>My game store website with a variety of games to choose from.
-                  (created with Eddrick Butler and Jacob Spence!)</p>
+                  (Created with Eddrick Butler and Jacob Spence!)</p>
                 </div>
                 <div class="col-md-3">
                     <h4> Connect-Four:</h4>
