Added skills page

--- a/my_portfolio/about.html
+++ b/my_portfolio/about.html
@@ -56,6 +56,9 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
+                        <a href="skills.html">Skills</a>
+                    </li>
+                    <li>
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
@@ -129,7 +132,7 @@
                         </span>
                         <p>
                             I am currently enrolled in Base Camp Coding Academy learning how to program and expect to graduate May 2017. I am most excited for Base Camp, it was an amazing once in a lifetime opportunity that I could not pass up. My classmates are awesome. We defintely
-                            could not have gotten a better class this year. The instructors are really hands on, and we all work really well together getting our work done. The languages I know are: Python, HTML, CSS, and JavaScript.
+                            could not have gotten a better class this year. The instructors are really hands on, and we all work really well together getting our work done.
                         </p>
                     </div>
                 </div>
