--- a/my_portfolio/skills.html
+++ b/my_portfolio/skills.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>My Portfolio - Contact</title>
+    <title>My Portfolio - Skills</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href="img/contact.jpg" rel="shortcut icon" />
+    <link href="img/skills.png" rel="shortcut icon" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -73,12 +73,12 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/image4.jpg')">
+    <header class="intro-header" style="background-image: url('img/image5.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>Contact Me</h1>
+                        <h1>Technical Skills</h1>
                     </div>
                 </div>
             </div>
@@ -89,12 +89,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <h3 style="text-align: center">Want to get in touch?</h3>
-                <p style="text-align: center">I would love to get in touch with you!
-                  <h3 style="text-align: center">Have questions?</h3>
-                  <p style="text-align: center">If you have any questions I would be happy to answer them for you!<p>
-                    <p style="text-align: center">Email: nshelton@basecampcodingacademy.org <br /> Cellphone number: 662-589-0286</p>
-
+                <h3 style="text-align: center">Languages:</h3>
+                <p style="text-align: center">Python <br /> HTML and CSS <br /> Bootstrap <br /> JavaScript <br /> JQuery</p>
             </div>
         </div>
     </div>
